Customer entity ,model, view created.

--- a/RandomTasks/RandomTasks/appsettings.json
+++ b/RandomTasks/RandomTasks/appsettings.json
@@ -1,6 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-RandomTasks-849A3A57-9FDF-4EE1-B87B-A87C7BB43EC7;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=PRPC-05; Database=RandomTask_DB ; Trusted_Connection=True;"
+    //"DefaultConnection": "Server=DESKTOP-0HGRPC6\\SQLEXPRESS; Database=SB_POS_DB ; Trusted_Connection=True;"
+    //"ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Demo.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //Update-database -context UserContext
+    //add-migration ...... -context UserContext
   },
   "Logging": {
     "LogLevel": {
